--- a/workshop.html
+++ b/workshop.html
@@ -10,25 +10,32 @@
 <ul>
 <li><a href="share/sofa/examples/Demos/caduceus.scn">Caduceus.scn</a></li>
 <li><a href="share/sofa/examples/Demos/chainHybrid.scn">ChainHybrid.scn</a></li>
-<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/FirstSteps/firststeps-tuto.py">First step tutorial</a></li>
+<li><a href="share/sofa/examples/Components/constraint/FrictionContact.scn">Friction Contact.</a></li>
 </ul>
 
  SoftRobots <hr>
 <ul>
-<li><a href="plugins/ModelOrderReduction/examples/MultiGait-SoftRobot/reducedMultiGait-softRobot.pyscn">MultiGait (with model order reduction)</a></li>
-<li><a href="plugins/SoftRobots/docs/tutorials/PneunetGripper/details/step6-pneumaticActuatorAndPythonScriptController.py">Pneumatic finger gripper (step6).</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/FirstSteps/firststeps-tuto.py">First step tutorial</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/PneunetGripper/details/step6-pneumaticActuatorAndPythonScriptController.py">Pneumatic finger gripper (step6).</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/CableGripper/details/step4.py">Cable based finger gripper (step 4).</a></li>
 
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/PneunetGripper/details/step7-grabTheCube.py">Pneu net gripper tuto.</a>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/CableGripper/cablegripper-tuto.py">Cable based finger gripper.</a></li>
 </ul>
 
-Tripod <hr>
- <ul>
+Tripod session 1<hr>
+<ul>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/tripod-tuto.py">Tripod tutorial.</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/s90servo.py">S90Servo prefab</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/actuatedarm.py">Arm prefab.</a></li>
-<li><a href="share/sofa/examples/Components/constraint/FrictionContact.scn">Friction Contact.</a></li>
+</ul>
+
+Tripod session 2<hr>
+<ul>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/step7.py">Hardware access.</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/step8.py">Inverse control.</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/maze.py">Maze motion planning.</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/step8-maze.py">Inverse control & contact.</a></li>
 </ul>
 
 
