--- a/workshop.html
+++ b/workshop.html
@@ -18,9 +18,9 @@
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/FirstSteps/firststeps-tuto.py">First step tutorial</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/PneunetGripper/details/step6-pneumaticActuatorAndPythonScriptController.py">Pneumatic finger gripper (step6).</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/CableGripper/details/step4.py">Cable based finger gripper (step 4).</a></li>
-
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/PneunetGripper/details/step7-grabTheCube.py">Pneu net gripper tuto.</a>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/CableGripper/cablegripper-tuto.py">Cable based finger gripper.</a></li>
+<li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Trunk/trunk.py">Trunk.</a></li>
 </ul>
 
 Tripod session 1<hr>
@@ -37,7 +37,6 @@ Tripod session 2<hr>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/maze.py">Maze motion planning.</a></li>
 <li><a href="plugins/SoftRobots/docs/sofapython3/tutorials/Tripod/details/step8-maze.py">Inverse control & contact.</a></li>
 </ul>
-
 
 <a ></a>
 </body>
